kubernetes/config/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  labels:
    name: redis
    app: redis
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
    nodePort: 30379
  selector:
    app: redis
